# biulab

./: .gitignore  BiuLabConfig.hh.in  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  biu  biubash  biulab  changelog.md  imgui.ini  other
app/: imgui.ini
app/genetic/maps/: base.map  big.map  cat.map  comp.map  high.map  huge.map  long.map  shizi.map  std.map  xxx.map
app/genetic/robbies/: 0_328.txt  0_381.txt  0_420.txt  0_423.txt  0_473.txt  0_480.txt  1_321.txt  1_369.txt  2_322.txt  2_323.txt  2_344.txt  2_347.txt  2_360.txt  4_324.txt  4_347.txt  5_301.txt  5_320.txt
base/: BiuTypes.cc  ControllerBase.cc  MapBase.cc  Widget.cc  WindowBase.cc
core/: ConfigBase.cc  ControllerBase.cc  Lab.cc  Lib.cc  Main.cc  MapBase.cc  Vec.cc  core.cc  core.hh  editor_map.cc  editor_map.hh  editor_robbie.cc  frame.cc  frame.hh  other.cc
example/: DataManager.cc  DataManager.hh  Frame.cc  Frame.hh  Makefile  SimpleMapModule.cc  SimpleMapModule.hh  WindowView.cc  WindowView.hh  lib.cpp  lib.hpp  roby.cpp  xx.cpp  xx.hpp  xxmain.cpp
example/BiulabWidget/: CMakeLists.txt
example/SimpleMap/: CMakeLists.txt
imgui/: imgui.h  imgui_impl_opengl3.h
include/: Base.hh  BiuLab.hh  BiuLabConfig.hh  BiuLabTypes.hh  BiuTypes.hh  ConfigBase.hh  ControllerBase.hh  CoreBase.hh  DataBase.hh  DataManager.hh  DynamicClass.hh  Frame.hh  Lab.hh  Lib.hh  MainWindow.hh  MapBase.hh  MapEditorBase.hh  Menu.hh  ModuleBase.hh  ModulesManager.hh  PluginHelper.hh  ProgramWindow.hh  Widget.hh  WidgetBase.hh  WindowBase.hh
install/include/: BiuTypes.hh  DynamicClass.hh  Lib.hh  MainWindow.hh  MapBase.hh  OverviewWindow.hh  WindowBase.hh
lib/: lib.cc  lib.hh
lib/frame/: BiuLabTypes.cc  DataManager.cc  DynamicClass.cc  ModulesManager.cc  PluginHelper.cc
lib/imgui/: imgui_biulab.cpp  imgui_biulab.h  imgui_biulab_extension.h  imgui_biulab_tools.cpp  imgui_biulab_tools.h  imgui_biulab_widgets.cpp  imgui_biulab_widgets.h
lib/tools/: Lib.cc  screen_capture.cc  screen_capture.hh
maps/: shizi.map  std.map
modules/: CMakeLists.txt  ModulesConfig.ini  ProgramConfig.ini
modules/BiulabWidget/: CMakeLists.txt  InspectWindow.cc  InspectWindow.hh  MapEditorBase.hh  OverviewWindow.cc  OverviewWindow.hh
modules/Life/: CMakeLists.txt  Life.cc  Life.hh  LifeController.cc  LifeController.hh  LifeModule.cc  LifeModule.hh  LifeWindow.cc  LifeWindow.hh
modules/LifeGame/: CMakeLists.txt  LifeGame.cc  LifeGame.hh  LifeGameConfig.hh  LifeGameController.cc  LifeGameController.hh  LifeGameControllerWindow.cc  LifeGameControllerWindow.hh  LifeGameMapBase.hh  LifeGameMapOne.cc  LifeGameMapOne.hh  LifeGameMapTwo.cc  LifeGameMapTwo.hh  LifeGameModule.cc  LifeGameModule.hh  LifeGameRuleBase.hh  LifeGameRuleOne.cc  LifeGameRuleOne.hh  LifeGameRuleTwo.cc  LifeGameRuleTwo.hh  LifeGameWindow.cc  LifeGameWindow.hh  LifeGameWindowOne.cc  LifeGameWindowOne.hh  LifeGameWindowTwo.cc  LifeGameWindowTwo.hh
modules/MapEditor/: CMakeLists.txt  MapConfig.cc  MapConfig.hh  MapEditor.cc  MapEditor.hh  MapEditorModule.cc  MapEditorModule.hh  MapEditorWindow.cc  MapEditorWindow.hh  MapModule.cc  MapModule.hh  MapView.cc  MapView.hh
modules/Maze/: CMakeLists.txt  MazeController.cc  MazeController.hh  MazeControllerWindow.cc  MazeControllerWindow.hh  MazeInspector.cc  MazeInspector.hh  MazeMap.cc  MazeMap.hh  MazeMapWindow.cc  MazeMapWindow.hh  MazeModule.cc  MazeModule.hh  MazePerson.cc  MazePerson.hh
modules/Robbie/: CMakeLists.txt  MapConfig.cc  MapConfig.hh  Robbie.cc  Robbie.hh  RobbieConfig.cc  RobbieConfig.hh  RobbieControlWindow.cc  RobbieControlWindow.hh  RobbieController.cc  RobbieController.hh  RobbieMap.cc  RobbieMap.hh  RobbieModule.cc  RobbieModule.hh  editor_robbie.cc
modules/SimpleMap/: CMakeLists.txt  SimpleMap.cc  SimpleMap.hh  SimpleMapConfig.hh  SimpleMapModule.cc  SimpleMapModule.hh  SimpleMapWindow.cc  SimpleMapWindow.hh
modules/Some/: CMakeLists.txt  SomeModule.cc  SomeModule.hh
resources/maps/: cat.map  high.map
resources/results/: 0_313.txt  0_356.txt  0_364.txt  0_385.txt  0_440.txt  0_451.txt  0_471.txt  0_477.txt  0_484.txt  0_487.txt  1_310.txt  1_329.txt  1_346.txt  1_347.txt  1_354.txt  1_371.txt  3_330.txt  3_354.txt  4_308.txt  4_339.txt  4_343.txt  4_360.txt  4_365.txt  4_395.txt  5_339.txt  5_347.txt  5_349.txt  5_351.txt  5_367.txt  5_380.txt  gai.txt
results/: 0_414.txt  0_482.txt  1_313.txt  1_342.txt  2_306.txt  2_307.txt  2_311.txt  2_329.txt  2_336.txt  2_353.txt  3_323.txt  4_331.txt  4_352.txt  5_302.txt  5_322.txt  5_332.txt  5_363.txt  5_366.txt
src/: BiuLab.cc  BiuLabTypes.cc  Lab.cc  Main.cc  MainWindow.cc  Menu.cc  ModuleBase.cc  ModulesManager.cc  ProgramWindow.cc  core_genetic.cpp  core_genetic.h  lib.cpp  main.cc  main.cpp  run.cpp
utils/frame/: DynamicClass.cc  InspectWindow.cc  InspectWindow.hh  MainViewport.cc  MainViewport.hh  Menu.cc  Menu.hh  ModuleWindow.cc  ModuleWindow.hh  OverviewWindow.cc  OverviewWindow.hh  PluginHelper.cc  SimpleMap.cc  SimpleMap.hh  SimpleMapWindow.cc  SimpleMapWindow.hh
utils/imgui/: imgui.cpp  imgui_biulab_extension.cpp  imgui_biulab_tools.cpp  imgui_biulab_tools.h  imgui_biulab_widgets.h
utils/tools/: screen_capture.hh
